주소지 gps 설정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity
             android:name=".AlarmActivity"
             android:exported="true" />
+        <activity android:name=".HomesaveActivity"/>
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".Signin" />
         <activity android:name=".Login">
