--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartMarker">
+
+        <receiver android:name=".GeofenceBroadcastReceiver"/>
+
         <activity
             android:name=".AlarmActivity"
             android:exported="true" />
@@ -52,6 +55,8 @@
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="r5lrkwge4n" />
+
+
     </application>
 
 </manifest>
